--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start1": "set HTTP_PORT=3002;set P2P_PORT=5002; set PEERS=ws//localhost:5001; node index "
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "body-parse": "^0.1.0",
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ws": "^7.4.1"
   }
 }
